W06 Vendor fix
